[package]
name = "arcrs"
version = "0.1.0"
authors = ["Jan Tschada <j.tschada@esri-de.com>"]
edition = "2018"
description = "Thin Python wrapper for implementing Geoprocessing Tools using Rust."
documentation = "https://github.com/esride-jts/arc-rs/blob/main/README.md"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["arcgis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcrs"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
