[package]
name = "arcrs"
version = "0.1.1-alpha.6"
authors = ["Jan Tschada <j.tschada@esri-de.com>"]
edition = "2018"
description = "Thin Python wrapper for implementing Geoprocessing Tools using Rust."
documentation = "https://github.com/esride-jts/arc-rs/blob/main/README.md"
readme = "../README.md"
license = "LGPL-3.0-or-later"
keywords = ["arcgis", "geospatial", "geoprocessing", "python"]

[lib]
name = "arcrs"
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
